# ComfyUI-kokoro

./: Kokoro Onnx TTS-example.json  README.md  nodes.py  pyproject.toml
comfyui-jhj-kokoro-onnx/: __init__.py
comfyui-jhj-kokoro-onnx/examples/: Kokoro Onnx TTS.json
comfyui-jhj-kokoro-onnx/modules/kokoro/: kokoro_inferencer.py
modules/kokoro/: kokoro_inferencer.py  model_downloader.py
