[project]
name = "ComfyUI-kokoro-TTS"
description = "Kokoro is an open-weight TTS model with 82 million parameters."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["onnxruntime-gpu", "kokoro-onnx"]

[project.urls]
Repository = "https://github.com/Apache0ne/ComfyUI-kokoro"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "ComfyUI-kokoro-TTS"
Icon = ""
